--- a/web.monitor/src/org/netbeans/modules/web/monitor/client/Bundle.properties
+++ b/web.monitor/src/org/netbeans/modules/web/monitor/client/Bundle.properties
@@ -11,9 +11,11 @@
 
 MON_All_1=All
 MON_All_transactions_2=All Records
+MON_Browser_cookie=Replay using the browser's session cookie
 MON_Cancel=Cancel
 MON_Cancel_Mnemonic=C
 MON_Client_3=Client
+MON_Client_Server=Client and Server
 MON_Client_3_Mnemonic=C
 MON_Cookies_4=Cookies
 MON_Could_not_5=Could not create GUI component for HTTP Monitor
@@ -36,8 +38,11 @@ MON_Request_19_Mnemonic=R
 MON_Header_19=Headers
 MON_Save_20=Save
 MON_Save_action_21=Save action failed
+MON_Saved_cookie=Replay using the recorded session cookie
 MON_Saved_Transactions_22=Saved Records
-MON_Servlet_23=Servlet and Server
+MON_Servlet_23=Servlet
+MON_Context_23=Context
+MON_Engine_23=Engine
 MON_Session_24=Session
 MON_Show_time_25=Show/Hide time stamp
 MON_Transaction_data_26=HTTP Monitor records data display
@@ -108,6 +113,19 @@ MON_Status=HTTP exit status
 MON_No_data=No data was posted
 MON_Path_info=Path info
 
+
+MON_Request_att_after=Request attributes after the request 
+MON_Request_att_after_Mnemonic=A
+MON_Request_att_before=Request attributes before the request
+MON_Request_att_before_Mnemonic=B
+ACS_MON_Request_att_afterA11yDesc=Request attributes after the request
+ACS_MON_Request_att_afterTableA11yName=Request Attributes After The Request
+ACS_MON_Request_att_afterTableA11yDesc=Request attributes after the request
+ACS_MON_Request_att_beforeA11yDesc=Request attributes before the request
+ACS_MON_Request_att_beforeTableA11yName=Request Attributes Before The Request
+ACS_MON_Request_att_beforeTableA11yDesc=Request attributes before the request
+
+
 # Client Table 
 MON_Software=Software used
 MON_Locale=Locale(s)
@@ -153,6 +171,7 @@ MON_Session_att_after_Mnemonic=A
 MON_Session_att_before=Session attributes before the request
 MON_Session_att_before_Mnemonic=B
 
+
 ACS_MON_Session_propertiesA11yDesc=Session properties.
 ACS_MON_Session_propertiesTableA11yName=Session Properties
 ACS_MON_Session_propertiesTableA11yDesc=Session properties.
@@ -182,7 +201,7 @@ MON_Servlet_context=Servlet context
 MON_Servlet_context_Mnemonic=E
 MON_Class_name=Class name
 MON_Package_name=Package name
-MON_Servlet_engine=Servlet engine properties
+MON_Servlet_engine=Server 
 MON_Servlet_engine_Mnemonic=R
 MON_Servlet_info=Servlet info
 MON_Servlet_name=Servlet name
@@ -200,13 +219,13 @@ ACS_MON_ServletTableA11yDesc=Servlet table.
 ACS_MON_Servlet_contextA11yDesc=Servlet context
 ACS_MON_Servlet_contextTableA11yName=Servlet Context Table
 ACS_MON_Servlet_contextTableA11yDesc=Servlet context table.
-ACS_MON_Servlet_engineA11yDesc=Servlet engine properties.
-ACS_MON_Servlet_engineTableA11yName=Servlet Engine Properties Table
-ACS_MON_Servlet_engineTableA11yDesc=Servlet engine properties table.
+ACS_MON_Servlet_engineA11yDesc=Server
+ACS_MON_Servlet_engineTableA11yName=Server Table
+ACS_MON_Servlet_engineTableA11yDesc=server table.
 
 MON_Platform=Platform
 MON_Java_version=Java version
-MON_Server_name=Hostname of servlet engine
+MON_Server_name=Hostname
 MON_Server_port=Port number of HTTP service 
 
 MON_Init_parameters=Init parameters
@@ -217,6 +236,12 @@ ACS_MON_Init_parametersA11yDesc=Init parameters.
 ACS_MON_Init_parametersTableA11yName=Init Parameters Table
 ACS_MON_Init_parametersTableA11yDesc=Init parameters table.
 
+
+MON_Context_att=Context attributes
+MON_Context_att_Mnemonic=C
+ACS_MON_Context_att_A11yDesc=Context attributes
+ACS_MON_Context_att_TableA11yName=Context Attributes
+ACS_MON_Context_att_TableA11yDesc=Context attributes 
 
 # Misc
 MON_Name=Name
@@ -351,3 +376,4 @@ MON_Transaction_View_Help_ID=ctx_monitorintro
 MON_Edit_Panel_Help_ID=monitor_resend
 #NOI18N
 MON_Server_Dialog_Help_ID=Monitor_ServerDialog
+
