--- a/web.monitor/build.xml
+++ b/web.monitor/build.xml
@@ -112,7 +112,7 @@ Microsystems, Inc. All Rights Reserved.
          <pathelement location="${nbroot}/web/core/netbeans/modules/jsp.jar"/>
          <pathelement location="${binroot}/httpserver/servletapi/release/modules/ext/servlet-2.2.jar"/> 
          <pathelement location="${binroot}/core/release/lib/ext/xerces.jar"/>
-         <pathelement location="${f4jroot}/dd2beans/netbeans/modules/dd2beans.jar"/>
+         <pathelement location="${nbroot}/schema2beans/netbeans/modules/schema2beans.jar"/>
       </classpath>
      </javac>
   </target>
@@ -127,7 +127,7 @@ Microsystems, Inc. All Rights Reserved.
        <classpath>
          <pathelement location="${nbroot}/openide/netbeans/lib/openide.jar"/>
          <pathelement location="${nbroot}/httpserver/netbeans/modules/httpserver.jar"/>
-         <pathelement location="${f4jroot}/dd2beans/netbeans/modules/dd2beans.jar"/>
+         <pathelement location="${nbroot}/schema2beans/netbeans/modules/schema2beans.jar"/>
          <pathelement location="${binroot}/httpserver/servletapi/release/modules/ext/servlet-2.2.jar"/> 
          <pathelement location="${nbroot}/web/core/netbeans/modules/jsp.jar"/>
        </classpath>
@@ -143,7 +143,7 @@ Microsystems, Inc. All Rights Reserved.
 
        <classpath>
          <pathelement location="${binroot}/core/release/lib/ext/xerces.jar"/>
-         <pathelement location="${f4jroot}/dd2beans/netbeans/modules/dd2beans.jar"/>
+         <pathelement location="${nbroot}/schema2beans/netbeans/modules/schema2beans.jar"/>
          <pathelement location="extra/servlet.jar"/>
        </classpath>
      </javac>
@@ -160,7 +160,7 @@ Microsystems, Inc. All Rights Reserved.
        <classpath>
           <pathelement location="${binroot}/httpserver/release/modules/ext/webserver.jar"/>
           <pathelement location="extra/servlet.jar"/> 
-         <pathelement location="${f4jroot}/dd2beans/netbeans/modules/dd2beans.jar"/>
+         <pathelement location="${nbroot}/schema2beans/netbeans/modules/schema2beans.jar"/>
        </classpath>
      </javac>
   </target>
