--- a/web.monitor/build.xml
+++ b/web.monitor/build.xml
@@ -58,34 +58,37 @@ Microsystems, Inc. All Rights Reserved.
     </delete>
     <delete dir="netbeans"/>
     <delete dir="Info"/>
-   <delete dir="javahelp/org/netbeans/modules/web/monitor/docs/JavaHelpSearch"/>
+   <delete dir="javahelp/org/netbeans/modules/web/monitor/docs/JavaHelpSearch2"/>
    <delete file="monitor.nbm"/>	
   </target>
 
   <!-- These are the secondary targets. -->
 
-  <target name="javahelp">
-    <copy todir="netbeans/docs">
-      <fileset dir="javahelp"/>
-    </copy>
-    <mkdir dir="netbeans/docs/org/netbeans/modules/web/monitor/docs/JavaHelpSearch"/>
-    <jhindexer basedir="netbeans/docs/org/netbeans/modules/web/monitor/docs/"
-               db="netbeans/docs/org/netbeans/modules/web/monitor/docs/JavaHelpSearch"
+ <target name="javahelp">
+    <mkdir dir="javahelp/org/netbeans/modules/web/monitor/docs/JavaHelpSearch2"/>
+    <jhindexer basedir="javahelp/org/netbeans/modules/web/monitor/docs/"
+               db="javahelp/org/netbeans/modules/web/monitor/docs/JavaHelpSearch2"
                jhall="${binroot}/nbbuild/lib/jhall.jar">
       <include name="**/*.html"/>
-      <exclude name="JavaHelpSearch/"/>
+      <exclude name="JavaHelpSearch2/"/>
       <exclude name="ja/"/>
       <exclude name="credits.html"/>
     </jhindexer>
-    <mkdir dir="netbeans/docs/org/netbeans/modules/web/monitor/docs/ja/JavaHelpSearch"/>
-    <jhindexer basedir="netbeans/docs/org/netbeans/modules/web/monitor/docs/ja/"
-               db="netbeans/docs/org/netbeans/modules/web/monitor/docs/ja/JavaHelpSearch"
+    <mkdir dir="javahelp/org/netbeans/modules/web/monitor/docs/ja/JavaHelpSearch2"/>
+    <jhindexer basedir="javahelp/org/netbeans/modules/web/monitor/docs/ja/"
+               db="javahelp/org/netbeans/modules/web/monitor/docs/ja/JavaHelpSearch2"
                locale="ja"
-	       jhall="${binroot}/nbbuild/lib/jhall.jar">
+               jhall="${binroot}/nbbuild/lib/jhall.jar">
       <include name="**/*.html"/>
-      <exclude name="JavaHelpSearch/"/>
+      <exclude name="JavaHelpSearch2/"/>
       <exclude name="credits.html"/>
     </jhindexer>
+    <mkdir dir="netbeans/modules/docs"/>
+    <locjar jarfile="netbeans/modules/docs/monitor.jar"
+            compress="true">
+      <fileset dir="javahelp" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
+      <locale name="ja"/>
+    </locjar>
   </target>
 
   <target name="release">
