IN=4903 - fix clean target to delete ja/JavaHelpSearh2

--- a/web.monitor/build.xml
+++ b/web.monitor/build.xml
@@ -59,6 +59,7 @@ Microsystems, Inc. All Rights Reserved.
     <delete dir="netbeans"/>
     <delete dir="Info"/>
    <delete dir="javahelp/org/netbeans/modules/web/monitor/docs/JavaHelpSearch2"/>
+   <delete dir="javahelp/org/netbeans/modules/web/monitor/docs/ja/JavaHelpSearch2"/>
    <delete file="monitor.nbm"/>	
   </target>
 
