Physical template for Shortcut to Target wizard may as well be a real shortcut script, just in case someone wants to instantiate it directly.

--- a/o.apache.tools.ant.module/src/org/apache/tools/ant/module/resources/Bundle.properties
+++ b/o.apache.tools.ant.module/src/org/apache/tools/ant/module/resources/Bundle.properties
@@ -17,7 +17,7 @@ Templates/Ant=Ant Build Scripts
 Templates/Ant/Project.xml=Blank Ant Project
 Templates/Ant/SampleProject.xml=Sample Ant Project
 Templates/Ant/CustomTask.java=Custom Task
-Templates/Ant/Shortcut.txt=Shortcut to Target
+Templates/Ant/Shortcut.xml=Shortcut to Target
 Menu/Help/HelpShortcuts/org-apache-tools-ant-module-mainpage.xml=Ant 1.4.1 Manual
 Actions/Help/org-apache-tools-ant-module-mainpage.xml=Ant 1.4.1 Manual
 # #14574:
