Made alterations to SAX Document Handler wizard as discussed yesterday. I will send Petr the text and tooltips that need to be inserted later today.

--- a/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
+++ b/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
@@ -52,27 +52,27 @@ EMPTY_HANDLING=Empty
 ## GenerateDOMScannerSupport.java
 NAME_SUFFIX_Scanner=Scanner
 MSG_DOM_1=Generating DOM scanner...
-MSG_DOM_ERR_1=Can not proceed. DTD is not wellformed! Check it first and then try again.
-MSG_DOM_ERR_2=Can not proceed. I/O problem occured.
+MSG_DOM_ERR_1=Cannot proceed. DTD is not well formed! Check it first and then try again.
+MSG_DOM_ERR_2=Cannot proceed. I/O problem occured.
 PROP_rootElementNameTitle=Select Root Element Name
 PROP_rootElementNameMne=R
 PROP_rootElementName=Root Element:
 
 ## GenerateDTDSupport.java
-MSG_use_dtd_as_document_type?=Do you want to use generated dtd as external document type?
+MSG_use_dtd_as_document_type?=Do you want to use generated DTD as external document type?
 
 ## SAXGeneratorFilePanel.java
 MSG_file_err_1=Valid Java class name expected.
 SAXGeneratorFilePanel.Form.name=Output File Names
-SAXGeneratorCustomizer.interfaceLabel.text=Notification Interface:
+SAXGeneratorCustomizer.interfaceLabel.text=Handler Interface:
 SAXGeneratorCustomizer.interfaceLabel.mne=I
 SAXGeneratorFilePanel.handlerImplLabel.text=Handler Implementation:
 SAXGeneratorFilePanel.handlerImplLabel.mne=H
-SAXGeneratorCustomizer.stubLabel.text=Dispatching Stub:
+SAXGeneratorCustomizer.stubLabel.text=Generated Parser:
 SAXGeneratorCustomizer.stubLabel.mne=D
-SAXGeneratorCustomizer.parsletLabel.text=Parslets Interface:
+SAXGeneratorCustomizer.parsletLabel.text=Data Convertor Interface:
 SAXGeneratorCustomizer.parsletLabel.mne="P"
-SAXGeneratorFilePanel.parsletImplLabel.text=Parslet Implementation:
+SAXGeneratorFilePanel.parsletImplLabel.text=Data Convertor Implementation:
 SAXGeneratorFilePanel.parsletImplLabel.mne=r
 PROP_save_it=\ Save Customized Bindings
 PROP_save_it_mnem=S
@@ -82,20 +82,20 @@ SAXGeneratorCustomizer.saveLabel.mne=L
 ## SAXGeneratorMethodPanel.java
 SAXGeneratorMethodPanel.table.column1=Element (QName)
 SAXGeneratorMethodPanel.table.column2=Handler Type
-SAXGeneratorMethodPanel.table.column3=Method
+SAXGeneratorMethodPanel.table.column3=Handler Method
 MSG_method_err_1=Valid part of Java identifier required.
-SAXGeneratorMethodPanel.Form.name=Handling Method Binding
+SAXGeneratorMethodPanel.Form.name=Element Mappings
 
 ## SAXGeneratorParsletPanel.java
-SAXGeneratorParsletPanel.table.column1=Element Name
-SAXGeneratorParsletPanel.table.column2=Parslet (Method)
+SAXGeneratorParsletPanel.table.column1=Element (QName)
+SAXGeneratorParsletPanel.table.column2=Convertor Method
 SAXGeneratorParsletPanel.table.column3=Return Type
 MSG_parslet_err_1=Valid Java return type required.
 MSG_parslet_err_2=Valid Java method name required.
-SAXGeneratorParsletPanel.Form.name=Parslets
+SAXGeneratorParsletPanel.Form.name=Data Convertors (Optional)
 
 ## SAXGeneratorSupport.java
-SAXGeneratorSupport.title=SAX Generator Wizard
+SAXGeneratorSupport.title=SAX Document Handler Wizard
 SAXGeneratorVersionPanel.step=API Versions
 SAXGeneratorMethodPanel.step=Element Mappings
 SAXGeneratorParsletPanel.step=Data Convertors
@@ -106,10 +106,10 @@ MSG_sax_progress_1_5=Generating SAX handler...
 MSG_sax_progress_2=Writing down generated SAX handler files...
 MSG_sax_progress_3=Opening generated SAX handler files in editor...
 # {0} holds non-localized exception text
-MSG_wizard_fail=Code Generation Failed. ({0})
+MSG_wizard_fail=Code generation failed. ({0})
 
 ## SAXGeneratorVersionPanel.java
-SAXGeneratorVersionPanel.Form.name=General Options
+SAXGeneratorVersionPanel.Form.name=API Versions
 SAXGeneratorVersionPanel.jaxpLabel.text=JAXP Version:
 SAXGeneratorVersionPanel.jaxpLabel.mne=J
 SAXGeneratorCustomizer.versionLabel.text=SAX Parser Version:
