#19382: Ignored Files property of Mount Properties causes RESyntaxException. The fix annotates the exception properly. Note: second part of fix will be in PropertyPanel in openide.
Action: (continue)

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -592,3 +592,7 @@ Templates/Services/IndentEngine=Indentation Engines
 Templates/Services/CompilerType=Compiler Types
 Templates/Services/DebuggerType=Debugger Types
 Templates/Services/Executor=Execution Types
+
+#ExLocalFileSystem
+EXC_InvalidRegularExpressionForIgnoredFiles=Please enter regular expression. {0}
+
