Resource bundle changes, please review these, especially changes to System ID and Public ID tooltips.

--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/Bundle.properties
@@ -12,8 +12,8 @@
 
 ## CatalogEntryBeanInfo.java
 PROP_public_id=Public ID
-PROP_public_id_desc=It represents a mapping key.
-PROP_system_id_desc=It represents a result value.
+PROP_public_id_desc=Public mapping key for catalog.
+PROP_system_id_desc=Absolute location of catalog file.
 PROP_system_id=System ID
 
 ## CatalogEntryNode.java
