--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/Bundle.properties
@@ -16,7 +16,7 @@ ACSD_SystemCatalogCustomizer=Customizer for Netbeans IDE catalog
 
 ## SystemCatalogReaderBeanInfo.java
 NAME_system_catalog=Netbeans Catalog
-TEXT_system_catalog_desc=Read-only IDE system catalog (suitable for development).
+TEXT_system_catalog_desc=Read-only IDE system catalog (useful for IDE module development).
 
 ## XCatalog.java
 # {0} = location
@@ -24,7 +24,7 @@ PROP_display_name=XML Catalog at {0}
 
 ## XCatalogBeanInfo.java
 NAME_x_catalog=XML Catalog
-TEXT_x_catalog_desc=Multi version implementation supporting v0.2 and v0.4.
+TEXT_x_catalog_desc=Multi-version implementation supporting v0.2 and v0.4.
 
 ## XCatalogCustomizer.java
 ACSD_XCatalogCustomizer=Customizer for XML Catalog
