--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/Bundle.properties
@@ -12,7 +12,7 @@
 ## CatalogCustomizer.java
 ACSD_CatalogCustomizer=Customizer for Sun's implementation of standard catalog
 
-LBL_preference=Prefer public
+LBL_preference=Prefer Public
 MNE_preference=P
 ACSD_preference=Prefer public ID over system ones during resolution?
 
