--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/lib/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/lib/Bundle.properties
@@ -10,7 +10,7 @@
 # Microsystems, Inc. All Rights Reserved.
 
 ## Util
-PROP_catalog_mask=Catalog files
+PROP_catalog_mask=Catalog Files
 TITLE_select_catalog=Select Catalog File
 PROP_select_button=Choose
 MSG_inValidFile=Is not valid file.
