resource bundle touch-ups, should all be ok but please review anyway.

--- a/xml.core/src/org/netbeans/modules/xml/core/resources/Bundle.properties
+++ b/xml.core/src/org/netbeans/modules/xml/core/resources/Bundle.properties
@@ -16,10 +16,10 @@ OpenIDE-Module-Short-Description=The module is a base for all XML related module
 OpenIDE-Module-Long-Description=The module is a base for all XML related modules. It recognizes XML and DTD documents, which can be opened in text editor. It supports parsing of those documents into TAX (Tree API for XML) representation. It supports synchronization among document representations. It also holds all settings shared among all XML related modules.
 
 ## Templates
-Templates/XML=XML & DTD
+Templates/XML=XML and DTD
 Templates/XML/emptyDTD.dtd=DTD Entity
 Templates/XML/XMLwithROOT.xml=XML Document
-Templates/XML/XMLwithDTD.xml=XML with DTD
+Templates/XML/XMLwithDTD.xml=XML With DTD
 Templates/XML/xhtml.xml=XHTML Document
 Templates/XML/StyleSheet.xml=Extensible Style Sheet
 
