More bundle touch-ups, should be ok but you can check them anyway.

--- a/xml.tax/lib/src/org/netbeans/tax/Bundle.properties
+++ b/xml.tax/lib/src/org/netbeans/tax/Bundle.properties
@@ -52,7 +52,7 @@ PROP_invalid_first_char=Cannot start with "{0}" character. Use an ASCII letter t
 PROP_NotationDeclSystemId=Notation System ID.
 
 #{0} violating version
-PROP_invalid_version_number=Invalid entity version "{0}" number. Try use "1.0".
+PROP_invalid_version_number=Invalid entity version "{0}" number. Try "1.0".
 
 PROP_invalid_empty_value=Empty string cannot be used.
 
@@ -60,7 +60,7 @@ PROP_invalid_null_value=Null value (null) is not allowed.
 
 EXC_Invalid_encoding=Invalid IANA encoding "{0}". Try "UTF-8".
 
-PROP_invalid_cdata_section_data=CDATA section content cannot contain "]]>" sequence as it is end delimiter. Break it into two.
+PROP_invalid_cdata_section_data=CDATA section content cannot contain "]]>" sequence as it is end delimiter. Break sequence into two.
 
 ## XML construct labels
 PROP_TextData=Text Data
@@ -75,7 +75,7 @@ PROP_NamespaceURI=Namespace URI
 PROP_DocumentVersion=Document Version
 PROP_EntityDeclSystemId=External Entity Declaration System ID
 PROP_EntityDeclName=Name of Declared Entity
-PROP_AttlistDeclAttributeDefaultValue=Default attribute value declaration
+PROP_AttlistDeclAttributeDefaultValue=Default Attribute Value Declaration
 PROP_EntityDeclPublicId=Entity Declaration Public ID
 PROP_DocumentTypePublicId=DOCTYPE Public ID
 PROP_ParameterEntityReferenceName=Name of Parameter Entity Eeference
@@ -113,30 +113,30 @@ EXC_Invalid_system_id="{0}" is an invalid system ID. Try valid URI.
 PROP_invalid_content_char=Invalid character "{0}".
 
 # do not tranlate #words
-PROP_invalid_attribute_list_declaration_default_type=Invalid default specification in attribute declaration. Use one of #REQUIRED, #IMPLIED or #FIXED.
+PROP_invalid_attribute_list_declaration_default_type=Invalid default specification in attribute declaration. Use #REQUIRED, #IMPLIED or #FIXED.
 
 #{0} offending value
 EXC_invalid_attribute_value=Invalid attribute value: {0}
 
-PROP_invalid_attribute_list_declaration_type=Invalid value constrain n  attribute declaration. Use one of CDATA, ID, IDREF, IDREFS, ENTITY, ENTITIES, NMTOKEN, NMTOKENS, NOTATION or enumerated.
+PROP_invalid_attribute_list_declaration_type=Invalid value constrain n  attribute declaration. Use CDATA, ID, IDREF, IDREFS, ENTITY, ENTITIES, NMTOKEN, NMTOKENS, NOTATION or enumerated.
 
 #{0} offenting text (may be long)
-EXC_Invalid_Entity_Decl_Internal_text=Invalid internal entity text (e.g. it contains forbidden characters):\n{0}
+EXC_Invalid_Entity_Decl_Internal_text=Invalid internal entity text (e.g. contains forbidden characters):\n{0}
 
 #{0} offending default
 EXC_invalid_attribute_default_value=Invalid attribute default value: {0}
 
 # do not translate literals in e.g.
-PROP_invalid_text_data=Invalid text value. E.g. escape < as &lt; and & as &amp;.
+PROP_invalid_text_data=Invalid text value (e.g. escape < as &lt; and & as &amp;).
 
 PROP_invalid_comment_data_end=Comment must not end with --> (see two dashes).
 
-PROP_invalid_processing_instruction_data=Processing instruction data cannot contain '?>'
+PROP_invalid_processing_instruction_data=Processing instruction data cannot contain "?>".
 
 #{0} offending value
-EXC_Invalid_public_id=Invalid public ID: {0}. Check if delimiter is not a part of ID.
+EXC_Invalid_public_id=Invalid public ID: {0}. Check if delimiter is part of ID.
 
-PROP_invalid_comment_data=Invalid comment data (e.g. '--' is not allowed).
+PROP_invalid_comment_data=Invalid comment data (e.g. "--" is not allowed).
 
 
 
