--- a/xml.tax/lib/src/org/netbeans/tax/traversal/Bundle.properties
+++ b/xml.tax/lib/src/org/netbeans/tax/traversal/Bundle.properties
@@ -12,7 +12,7 @@
 # empty no resources to L10N
 
 #org.netbeans.tax.traversal.TreeNodeWalker
-EXC_invalid_current_node_value=Can not set 'null' as current node.
+EXC_invalid_current_node_value=Cannot set "null" as current node.
 
 #org.netbeans.tax.traversal.TreeNodeIterator
 EXC_TreeNodeIterator.nextNode=TreeNodeIterator.nextNode() called on invalid node.
