Czenglish --> english correction of the last commit.
Action: (continue)

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -594,5 +594,6 @@ Templates/Services/DebuggerType=Debugger Types
 Templates/Services/Executor=Execution Types
 
 #ExLocalFileSystem
-EXC_InvalidRegularExpressionForIgnoredFiles=Please enter regular expression. {0}
+# {0} - regexp syntax error detail
+EXC_InvalidRegularExpressionForIgnoredFiles=Please enter a valid regular expression. {0}
 
