More bundle changes. Should be ok but you can review anyway.

--- a/xml.tools/src/org/netbeans/modules/xml/tools/actions/Bundle.properties
+++ b/xml.tools/src/org/netbeans/modules/xml/tools/actions/Bundle.properties
@@ -12,10 +12,10 @@
 
 ## CSSStyleAction.java
 NAME_SUFFIX_Stylesheet=Stylesheet
-MSG_Leaving_CSS_in_clipboard=An internal error. Leaving CSS source text in the clipboard.
+MSG_Leaving_CSS_in_clipboard=An internal error occurred. Leaving CSS source text in the clipboard.
 MSG_CSS_placed_in_clipboard=The CSS source has been placed into the clipboard.
-MSG_IO_ex_CSS_writing.=An I/O exception during style sheet writing.
-MSG_CSS_fatal_error=Can not generate CSS.
+MSG_IO_ex_CSS_writing.=An I/O exception occured during style sheet writing.
+MSG_CSS_fatal_error=Cannot generate CSS.
 NAME_Generate_CSS=Generate CSS ...
 
 ## CheckAction.java
@@ -33,9 +33,9 @@ NAME_Validate_XML=Validate XML
 ## XMLCompiler.java
 # {0} stays for file name that is beiing checked
 MSG_checking=Checking {0}...
-MSG_warning_disk=Warning: using persistent file version intead of modified one.
+MSG_warning_disk=Warning: Using persistent file version intead of modified one.
 MSG_parser_internal=Using XML module internal parser.
-MSG_parser_err_1=Can not instantiate any JAXP parser.
+MSG_parser_err_1=Cannot instantiate any JAXP parser.
 # {0} location of plugged parser
 MSG_parser_plug=Using JAXP parser at {0}.
 
