--- a/xtest/examples/MyModule/test/build.xml
+++ b/xtest/examples/MyModule/test/build.xml
@@ -45,58 +45,53 @@ Microsystems, Inc. All Rights Reserved.
     <!-- Setting classpathes -->
     <!-- =================== -->
     
-    <target name="init" depends="prepare-compile-classpath,prepare-codetest-classpath">
-        <!-- During filling classpathes remember that only <module>/test 
-             is checked out during automated test execution so <module>/src 
-             or <module>/netbeans isn't available.
-             
-             If you need to add something from <module>/src or <module>/netbeans
-             to classpath use target prepare-compile-classpath or prepare-codetest-classpath
-             which fills path according to property xtest.source.location. This property
-             can hav values "src" (compilation and execution against sources), "jar" (compil.
-             and execut. against jars) or "ide" (compil. and execut. against installed IDE).
-             "ide" mode is used during automated test execution so it has to be always supported. 
-          -->
+    <!-- During filling classpathes remember that only <module>/test 
+         is checked out during automated test execution so <module>/src 
+         or <module>/netbeans isn't available.
+            
+         If you need to add something from <module>/src or <module>/netbeans
+         to classpath use target prepare-compile-classpath or prepare-codetest-classpath
+         which fills path according to property xtest.source.location. This property
+         can hav values "src" (compilation and execution against sources), "jar" (compil.
+         and execut. against jars) or "ide" (compil. and execut. against installed IDE).
+         "ide" mode is used during automated test execution so it has to be always supported. 
+      -->
     
-        <!-- List of directories where jars will be searched. -->
-        <property name="xtest.extra.jars.path" location=""/>
+    <!-- List of directories where jars will be searched. -->
+    <property name="xtest.extra.jars.path" location=""/>
     
-        <!-- This jars is used for compilation, execution codetests and also for
-             execution ide tests (it means this classpath will be mounted in repository).
-             You can also write only name of jar or zip file, not in which directory it is and 
-             this file will be searched in directories specified by property xtest.extra.jars.path 
-                 example: <property name="xtest.extra.jars" value="jemmy.jar;jelly.jar"/>
-          -->
+    <!-- This jars is used for compilation, execution codetests and also for
+         execution ide tests (it means this classpath will be mounted in repository).
+         You can also write only name of jar or zip file, not in which directory it is and 
+         this file will be searched in directories specified by property xtest.extra.jars.path 
+             example: <property name="xtest.extra.jars" value="jemmy.jar;jelly.jar"/>
+      -->
                 
-  	<property name="xtest.extra.jars"     value="../mymodule.jar"/>
+    <property name="xtest.extra.jars"     value="../mymodule.jar"/>
 
-	<!-- These jars will be copied to directory ${netebans.home}/lib/ext.
-	     Again you can write only name of jar or zip file, not in which directory it is and 
-             this file will be searched in directories specified by property xtest.extra.jars.path 
-                 example: <property name="xtest.extra.jars.ide" value="jdbc_driver1.zip;jdbcd_river2.jar"/>
-          -->
-        <property name="xtest.extra.jars.ide" value=""/>
+    <!-- These jars will be copied to directory ${netebans.home}/lib/ext.
+	 Again you can write only name of jar or zip file, not in which directory it is and 
+         this file will be searched in directories specified by property xtest.extra.jars.path 
+             example: <property name="xtest.extra.jars.ide" value="jdbc_driver1.zip;jdbcd_river2.jar"/>
+      -->
+    <property name="xtest.extra.jars.ide" value=""/>
 
-        <!-- This property contains directories to compile.
-             These directories will be compiled separately. 
-                 exanple: <property name="compile.srcdir" value="unit/src;regr/src"/>
-             NEEDS TO BE SET!
-          -->
-        <property name="compile.srcdir" value="unit/src;logging/src"/>
 
-        <!-- Arguments which will be added into commandline of starting IDE. 
-                 example: <property name="xtest.ide.commandline.suffix" value="-J-Dxtest.useclassloader=org.openidex.util"/>
-          -->
-        <property name="xtest.ide.commandline.suffix" value=""/>
+    <!-- Arguments which will be added into commandline of starting IDE. 
+             example: <property name="xtest.ide.commandline.suffix" value="-J-Dxtest.useclassloader=org.openidex.util"/>
+      -->
+    <property name="xtest.ide.commandline.suffix" value=""/>
   	
+    <target name="init" depends="prepare-compile-classpath,prepare-codetest-classpath">
 	<!-- This classpath is beside jars in xtest.extra.jars also used for compilation, 
 	     but it depends on property xtest.source.location which classpath will be used.
 	     Fill apropriate classpathes in targets "${xtest.source.location}compile-classath". -->
-            <!--
+            
 	<property name="compiletest.classpath" refid="compiletest.classpath"/>
-            -->
+            
+            <!--
         <property name="compiletest.classpath" value="${junit.path};../src"/>
-	
+	-->
 	<!-- This classpath is beside jars in xtest.extra.jars also used for execution codetests,
 	     but it depends on property xtest.source.location which classpath will be used.
 	     Fill apropriate classpathes in targets "${xtest.source.location}test-classath". -->
@@ -110,11 +105,11 @@ Microsystems, Inc. All Rights Reserved.
     
     <target name="all" depends="runtests"/>
     
-    <!-- This calls common build process. -->
-    <!-- You can write your own target if you need something special -->
+    <!-- This calls target which will call compilers according to cfg file.
+         You should not change this target unless you realy know what you are doing -->
     <target name="buildtests" depends="init">
        <ant dir="." antfile="${xtest.module_harness.antfile}"
-             target="buildtests"/>
+             target="compiler-launcher"/>
     </target>
     
     <!-- This calls common clean process. -->
@@ -131,30 +126,7 @@ Microsystems, Inc. All Rights Reserved.
         <ant dir="." antfile="${xtest.module_harness.antfile}"
              target="runtests"/>
     </target>
-    
-    <!-- This target is executed from test-executor in newly created Project -->
-    <!-- Name of this task is defined in cfg-xxx.xml -->
-    <!-- This target executes tests inside IDE -->
-    <target name="runidetest" depends="init">
-        <!-- This property contains classpath for execution. 
-             All items in this classpath will be mounted in repository -->
-        <ant dir="." antfile="${xtest.module_harness.antfile}"
-             target="test">
-           <property name="xtest.exectype" value="ide"/>
-        </ant>
-    </target>
-    
-    <!-- This target is executed from test-executor in newly created Project -->
-    <!-- Name of this task is defined in cfg-xxx.xml -->
-    <!-- This target executes standalone tests -->
-    <target name="runcodetest" depends="init">
-        <!-- This property contains classpath for execution. -->
-        <ant dir="." antfile="${xtest.module_harness.antfile}"
-             target="test">
-           <property name="xtest.exectype" value="code"/>
-        </ant>
-    </target>
-    
+   
     <!-- This target is executed from test-executor in newly created Project -->
     <!-- Name of this task is defined in cfg-xxx.xml -->
     <target name="test_report">
@@ -175,6 +147,59 @@ Microsystems, Inc. All Rights Reserved.
     <target name="printconfig">
         <echo message="Default config is testtype: ${xtest.testtype}, attributes: ${xtest.attribs}."/>
     </target>
+    
+    <!-- ========= -->
+    <!-- Compilers -->
+    <!-- ========= -->
+    
+    <target name="unit-compiler" depends="init">
+       <ant dir="." antfile="${xtest.module_harness.antfile}"
+             target="buildtests">
+           <!-- This property contains directories to compile.
+    	        These directories will be compiled separately. 
+                   exanple: <property name="compile.srcdir" value="unit/src1;unit/src2"/>
+             -->
+           <property name="compile.srcdir" value="unit/src"/>
+       </ant>
+    </target>
+
+    <target name="logging-compiler" depends="init">
+       <ant dir="." antfile="${xtest.module_harness.antfile}"
+             target="compiletests">
+           <!-- This property contains directories to compile.
+    	        These directories will be compiled separately. 
+                   exanple: <property name="compile.srcdir" value="unit/src1;unit/src2"/>
+             -->
+           <property name="compile.srcdir" value="logging/src"/>
+       </ant>
+       <ant dir="." antfile="${xtest.module_harness.antfile}"
+             target="jars"/>
+    </target>
+    
+    <!-- ========= -->
+    <!-- Executors -->
+    <!-- ========= -->
+    
+    <!-- This target is executed from test-executor in newly created Project -->
+    <!-- Name of this task is defined in cfg-xxx.xml -->
+    <!-- This target executes tests inside IDE -->
+    <target name="runidetest" depends="init">
+        <ant dir="." antfile="${xtest.module_harness.antfile}"
+             target="test">
+           <property name="xtest.exectype" value="ide"/>
+        </ant>
+    </target>
+    
+    <!-- This target is executed from test-executor in newly created Project -->
+    <!-- Name of this task is defined in cfg-xxx.xml -->
+    <!-- This target executes standalone tests -->
+    <target name="runcodetest" depends="init">
+        <ant dir="." antfile="${xtest.module_harness.antfile}"
+             target="test">
+           <property name="xtest.exectype" value="code"/>
+        </ant>
+    </target>
+ 
 
    <!-- =============================================================
         Following targets are for "advanced" users who needs more 
